--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 JTIM LIFE para mezclar mis dos pasiones: la Programacion y la Musica.
                 Ayudando a las personas que se quieran iniciar en el mundo musical.
             </p>
-            <a href="">Descargar CV</a>
+            <a href="https://drive.google.com/file/d/1uArrLIgLbne7kwqLqXZjBZoNADlcc2R_/view?usp=sharing">Descargar CV</a>
         </div>
     </section>
 
