--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
             <h2>Soy <span>!Jose!</span> </h2>
             <h3>Programador y Desarrollador</h3>
             <p>
-                Estudie musica y, tras años aprendiendo, 
+                Estudie musica y tras años aprendiendo, 
                 me pase al mundo de la Programacion. Desde
                 entonces disfruto creando experiencias Web 
                 para los usuarios.
             </p>
             <p>
-                entre mis exitos destaco que durante el Bootcamp
+                Entre mis exitos destaco que durante el Bootcamp
                 de desarrollo Front-End en Academlo, ayude a mis
                 compañeros a aprender sobre CSS y responsive web design.
                 Me encanta el diseño en CSS puro, creo en su importancia,
