--- a/index.html
+++ b/index.html
@@ -315,16 +315,16 @@
         <h3 class="titulo-seccion">Contactame</h3>
         <div class="contenedor-form">
 
-            <form name="contact" method="post" netlify>
+            <form action="./pages/exitoMensaje.html" name="contact" method="post" netlify>
                 <div class="fila mitad">
-                    <input type="text" name="name" placeholder="Nombre Completo" class="input-mitad">
-                    <input type="email" name="email" placeholder="Correo Electronico" class="input-mitad">
+                    <input type="text" name="name" placeholder="Nombre Completo" class="input-mitad" required>
+                    <input type="email" name="email" placeholder="Correo Electronico" class="input-mitad" required>
                 </div>
                 <!-- <div class="fila">
                     <input type="text" placeholder="Tema..." class="input-full">
                 </div> -->
                 <div class="fila">
-                    <textarea name="mensaje" id="" placeholder="Tu Mensaje..." class="input-full"></textarea>
+                    <textarea name="mensaje" id="" placeholder="Tu Mensaje..." class="input-full" required></textarea>
                 </div>
 
                 <input type="submit" value="Enviar" class="btn-enviar">
