--- a/index.html
+++ b/index.html
@@ -266,8 +266,9 @@
 
                 <div class="fila">
                     <textarea name="mensaje" id="" placeholder="Tu Mensaje..." class="input-full" required></textarea>
-                    <div data-netlify-recaptcha="true"></div>
                 </div>
+
+                <div data-netlify-recaptcha="true" class="recapcha"></div>
 
                 <input type="submit" value="Enviar" class="btn-enviar">
             </form>
