--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <i class="fa-solid fa-bars"></i>
                     </div>
 
+                    
 
                     <div class="redes">
                         <a href="https://www.facebook.com/josealejandro.maldonadoarteaga?mibextid=YMEMSu"><i class="fa-brands fa-facebook"></i></a>
@@ -258,7 +259,7 @@
 
             <form action="./pages/exitoMensaje.html" name="contact" method="post" netlify>
 
-                <input type="hidden" name="subject" value="Jose, has recibido un nuevo mensaje desde el formulario de tu pagina: portafolio-jmaldo.netlify.app" />
+                <input type="hidden" name="Mensaje" value="Jose, has recibido un nuevo mensaje desde el formulario de tu pagina: portafolio-jmaldo.netlify.app" />
                 <div class="fila mitad">
                     <input type="text" name="nombre" placeholder="Nombre Completo" class="input-mitad" required>
                     <input type="email" name="correo" placeholder="Correo Electronico" class="input-mitad" required>
