actualizacion de portafolio2.0

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 JTIM LIFE para mezclar mis dos pasiones: la Programacion y la Musica.
                 Ayudando a las personas que se quieran iniciar en el mundo musical.
             </p>
-            <a href="./docs/Curriculum Jose Maldonado.pdf">Descargar CV</a>
+            <a href="./docs/Curriculum Maldonado arteaga.pdf">Descargar CV</a>
 
             <!-- <a href="https://drive.google.com/file/d/1uArrLIgLbne7kwqLqXZjBZoNADlcc2R_/view?usp=sharing">Descargar CV</a> -->
         </div>
