acualizacion de texto

--- a/index.html
+++ b/index.html
@@ -68,23 +68,13 @@
             <h2>Soy <span>!Jose!</span> </h2>
             <h3>Programador y Desarrollador</h3>
             <p>
-                Estudie musica y tras años aprendiendo, 
-                me pase al mundo de la Programacion. Desde
-                entonces disfruto creando experiencias Web 
-                para los usuarios.
+                Estudié música y, tras años de aprendizaje, me pasé al mundo de la programación. Desde entonces, disfruto creando experiencias web para los usuarios.
             </p>
             <p>
-                Entre mis exitos destaco que durante el Bootcamp
-                de desarrollo Front-End en Academlo, ayude a mis
-                compañeros a aprender sobre CSS y responsive web design.
-                Me encanta el diseño en CSS puro, creo en su importancia,
-                y me gusta compartir mi conocimiento sobre ello.
+                Entre mis éxitos, destaco que durante el Bootcamp de desarrollo Front-End en Academlo ayudé a mis compañeros a aprender sobre CSS y diseño web responsivo. Me encanta el diseño en CSS puro, creo en su importancia y disfruto compartir mi conocimiento sobre ello.
             </p>
             <p>
-                Cuento con experiencia desarrollando aplicaciones, sitios y
-                paginas Web, actualmente estoy creando una iniciativa llamada 
-                JTIM LIFE para mezclar mis dos pasiones: la Programacion y la Musica.
-                Ayudando a las personas que se quieran iniciar en el mundo musical.
+                Cuento con experiencia en el desarrollo de aplicaciones, sitios y páginas web.
             </p>
             <a href="./docs/Curriculum Maldonado arteaga.pdf">Descargar CV</a>
 
